# bonsai-penjing-design-automation-agent-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  SKILL.md  pyproject.toml
assets/diagrams/: harness_flow.md
assets/templates/: report_template.md
bonsai_penjing/: __init__.py  cli.py  config.py  context.py  errors.py  harness.py  models.py
bonsai_penjing/services/: __init__.py  advisor.py  core_analysis.py  domain_knowledge.py  evidence_collector.py  gather_requirements.py  knowledge_updater.py  quality_gates.py
config/: __init__.py  defaults.yaml  hooks.py  production.py  tools.py
references/: form_templates.md  species_profiles.md
scripts/: batch_analyze.py  seed_knowledge.py  setup.py
skills/: main.md  sub-advisor.md  sub-core-analysis.md  sub-evidence-collector.md  sub-gather-requirements.md  sub-knowledge-updater.md
tests/: TEST_RESULTS.md  conftest.py  test-scenarios.md  test_config.py  test_errors.py  test_full_pipeline.py  test_harness.py  test_models.py  test_services.py
tools/: knowledge_updater.py  run_test_scenarios.py  test_knowledge_updater.py
